--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <button>Enter</button>
         </div>
         <div class="wishes-display">
+          <i class="fa-regular fa-file"></i>
           <p>No wishes here</p>
         </div>
       </main>
