--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <main>
         <h1>Wishlist</h1>
         <div class="input-div">
-          <input type="text" name="" id="" placeholder="Enter a wish" />
-          <button>Enter</button>
+          <input type="text" name="" id="input" placeholder="Enter a wish" />
+          <button id="button">Enter</button>
         </div>
         <div class="wishes-display">
           <i class="fa-regular fa-file"></i>
