Add ability to enter text

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <h1>Wishlist</h1>
         <div class="input-div">
           <input type="text" name="" id="input" placeholder="Enter a wish" />
-          <button id="button">Enter</button>
+          <button id="button">
+            Enter <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
-        <div class="wishes-display">
+        <div class="wishes-display" id="wishes-display">
           <i class="fa-regular fa-file"></i>
           <p>No wishes here</p>
         </div>
