Add input features and fix UI

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             Enter <i class="fa-solid fa-arrow-right"></i>
           </button>
         </div>
-        <div class="wishes-display" id="wishes-display">
+        <ul class="wishes-display" id="wishes-display">
           <i class="fa-regular fa-file"></i>
           <p>No wishes here</p>
-        </div>
+        </ul>
       </main>
     </div>
   </body>
